--- a/index.html
+++ b/index.html
@@ -14,24 +14,12 @@
 	<div class="content">
 	<header>
 		<h1>Take the plunge...</h1>
-		<p>Curious about what tech languages or skills you need to learn to be marketable? Provide a language or skill to see how many jobs postings for that skill there have been on "Monster.com" within the past year in the following countries: USA, UK, Germany, Sweden, Spain, Ireland, Netherlands, Austria, Czech Republic, Belgium, Finland, India and Greece. Optionally, you can filter out each country by specifying the country for which you would like to see results.</p>
+		<p>Curious about what tech languages or skills you need to learn to be marketable? Provide a start and end date to see how many jobs postings for there have been for various each language/skill on "Monster.com" within the past year in the following countries: USA, UK, Germany, Sweden, Spain, Ireland, Netherlands, Austria, Czech Republic, Belgium, Finland, India and Greece. Optionally, you can filter out each country by specifying the country for which you would like to see results.</p>
 	</header>
 	<form id="term-query">
 		<div id="term">
 			<label>Language/Skill:</label>
-			<input type="text" id="search-term" autofocus required>
-		</div>
-		<div id="country">
-			<label>Country:</label>
-			<input type="text" id="social-query">
-		</div>
-		<div id="dateFromPicker">
-			<label>Date From:</label>
-			<input type="date" id="dateFrom">
-		</div>
-		<div id="dateToPicker">
-			<label>Date To:</label>
-			<input type="date" id="dateTo">
+			<input type="text" id="like" autofocus required>
 		</div>
 		<input type="submit" value="GO">
 	</form>
