--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div class="content">
 	<header>
 		<h1>Take the plunge...</h1>
-		<p>Curious about what tech languages or skills you need to learn to be marketable? Enter a language or skill and we'll return the number and type of jobs matching your entry on "Monster.com" within the past year in the following countries: USA, UK, Germany, Sweden, Spain, Ireland, Netherlands, Austria, Czech Republic, Belgium, Finland, India and Greece. (Will only return the top 5 results)</p>
+		<p>Curious about what tech languages or skills you need to learn to be marketable? Enter a language or skill and we'll return the number and type of jobs matching your entry on "Monster.com" within the past year in the following countries: USA, UK, Germany, Sweden, Spain, Ireland, Netherlands, Austria, Czech Republic, Belgium, Finland, India and Greece.</p>
 	</header>
 	<form id="term-query">
 		<div id="term">
